# nyx-gen

./: .gitignore  README.md  build.sh  pyproject.toml
.github/workflows/: deploy.yml
nyx_gen/: __init__.py  abstract_generator.py  cli.py
nyx_gen/generators/: arduino_eth.py  arduino_wifi.py  gnuradio.py  posix_c.py  posix_cpp.py  python.py
